option java_package = "tajo.engine";
option java_outer_classname = "MasterWorkerProtos";
option java_generic_services = false;
option java_generate_equals_and_hash = true;

import "CatalogProtos.proto";
import "tajo_protos.proto";

message TaskStatusProto {
  required QueryUnitAttemptIdProto id = 1;
  required float progress = 2;
  required TaskAttemptState state = 3;
  optional StatSetProto stats = 4;
  optional TableStatProto resultStats = 5;
  repeated Partition partitions = 6;
}

message QueryUnitRequestProto {
    required QueryUnitAttemptIdProto id = 1;
    repeated TabletProto fragments = 2;
    required string outputTable = 3;
    required bool clusteredOutput = 4;
    required string serializedData = 5;
    optional bool interQuery = 6 [default = false];
    repeated Fetch fetches = 7;
}

message Fetch {
    required string name = 1;
    required string urls = 2;
}

message QueryUnitResponseProto {
    required string id = 1;
    required QueryState status = 2;
}

message StatusReportProto {
  required int64 timestamp = 1;
  required string serverName = 2;
  required int32 availableTaskSlots = 3;
  required int32 pendingTasks = 4;
  repeated TaskStatusProto status = 5;
  repeated QueryUnitAttemptIdProto pings = 6;
}

message CommandRequestProto {
    repeated Command command = 1;
}

message CommandResponseProto {
}

message Command {
    required QueryUnitAttemptIdProto id = 1;
    required CommandType type = 2;
}

enum CommandType {
    PREPARE = 0;
    LAUNCH = 1;
    STOP = 2;
    FINALIZE = 3;
}

message Partition {
    required int32 partitionKey = 1;
    required string fileName = 2;
}

message ServerStatusProto {
    message System {
        required int32 availableProcessors = 1;
        required int64 freeMemory = 2;
        required int64 maxMemory = 3;
        required int64 totalMemory = 4;
    }
    message Disk {
        required string absolutePath = 1;
        required int64 totalSpace = 2;
        required int64 freeSpace = 3;
        required int64 usableSpace = 4;
    }
    required System system = 1;
    repeated Disk disk = 2;
    required int32 taskNum = 3;
}
